--- a/SupermarketWPF/SupermarketWPF/View/StocuriView.xaml
+++ b/SupermarketWPF/SupermarketWPF/View/StocuriView.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SupermarketWPF.View.StocuriView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="StocuriView" Height="600" Width="800">
+        Title="StocuriView" Height="450" Width="800">
     <Window.Resources>
         <Style x:Key="PlaceholderTextBoxStyle" TargetType="TextBox">
             <Style.Resources>
@@ -32,17 +32,18 @@
             <DatePicker x:Name="dpDataAprovizionarii" Width="200" Margin="5" SelectedDate="{Binding DataAprovizionarii, Mode=TwoWay}"/>
             <DatePicker x:Name="dpDataExpirarii" Width="200" Margin="5" SelectedDate="{Binding DataExpirarii, Mode=TwoWay}"/>
             <TextBox x:Name="txtPretAchizitie" Width="200" Margin="5" Tag="Preț de Achiziție" Style="{StaticResource PlaceholderTextBoxStyle}" Text="{Binding PretAchizitie, Mode=TwoWay}"/>
-            <TextBox x:Name="txtPretDeVanzare" Width="200" Margin="5" Tag="Preț de Vânzare" Style="{StaticResource PlaceholderTextBoxStyle}" Text="{Binding PretDeVanzare, Mode=TwoWay}" IsReadOnly="True"/>
+            <TextBox x:Name="txtPretDeVanzare" Width="200" Margin="5" Tag="Preț de Vânzare" Style="{StaticResource PlaceholderTextBoxStyle}" Text="{Binding PretDeVanzare, Mode=TwoWay}"/>
             <Button Content="Adaugă Stoc" Command="{Binding AddStocCommand}" Width="200" Margin="5"/>
+            <Button Content="Actualizează Preț de Vânzare" Command="{Binding UpdatePretDeVanzareCommand}" Width="200" Margin="5"/>
         </StackPanel>
-        <DataGrid ItemsSource="{Binding StocuriList}" AutoGenerateColumns="False" CanUserAddRows="False" Margin="10,248,10,10">
+        <DataGrid ItemsSource="{Binding StocuriList}" AutoGenerateColumns="False" Width="750" Margin="25,297,25,10" SelectionChanged="DataGrid_SelectionChanged">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Produs ID" Binding="{Binding ProdusId}"/>
-                <DataGridTextColumn Header="Cantitate" Binding="{Binding Cantitate}"/>
-                <DataGridTextColumn Header="Unitate de Măsură" Binding="{Binding UnitateDeMasura}"/>
-                <DataGridTextColumn Header="Data Aprovizionării" Binding="{Binding DataAprovizionarii, StringFormat=d}"/>
-                <DataGridTextColumn Header="Data Expirării" Binding="{Binding DataExpirarii, StringFormat=d}"/>
-                <DataGridTextColumn Header="Preț de Achiziție" Binding="{Binding PretAchizitie}"/>
+                <DataGridTextColumn Header="Produs ID" Binding="{Binding ProdusId}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Cantitate" Binding="{Binding Cantitate}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Unitate de Măsură" Binding="{Binding UnitateDeMasura}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Data Aprovizionării" Binding="{Binding DataAprovizionarii}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Data Expirării" Binding="{Binding DataExpirarii}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Preț de Achiziție" Binding="{Binding PretAchizitie}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Preț de Vânzare" Binding="{Binding PretDeVanzare}"/>
             </DataGrid.Columns>
         </DataGrid>
