--- a/SupermarketWPF/SupermarketWPF/View/AdministratorView.xaml
+++ b/SupermarketWPF/SupermarketWPF/View/AdministratorView.xaml
@@ -1,21 +1,14 @@
 ﻿<Window x:Class="SupermarketWPF.View.AdministratorView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SupermarketWPF.View"
-        mc:Ignorable="d"
         Title="AdministratorView" Height="450" Width="800">
     <Grid>
-        <DockPanel>
-            <StackPanel DockPanel.Dock="Left" Width="200" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <Button Content="Producători" Command="{Binding NavigateCommand}" CommandParameter="Producatori" />
-                <Button Content="Utilizatori" Command="{Binding NavigateCommand}" CommandParameter="Utilizatori" />
-                <Button Content="Categorii" Command="{Binding NavigateCommand}" CommandParameter="Categorii" />
-                <Button Content="Produse" Click="OpenProduseWindow_Click" />
-                <Button Content="Stocuri" Click="OpenStocuriWindow_Click" />
-            </StackPanel>
-            <ContentControl Content="{Binding CurrentView}" />
-        </DockPanel>
+        <StackPanel>
+            <Button Content="Producători" Command="{Binding OpenProducatoriViewCommand}" Width="200" Margin="5"/>
+            <Button Content="Utilizatori" Command="{Binding OpenUtilizatoriViewCommand}" Width="200" Margin="5"/>
+            <Button Content="Categorii" Command="{Binding OpenCategoriiViewCommand}" Width="200" Margin="5"/>
+            <Button Content="Produse" Command="{Binding OpenProduseViewCommand}" Width="200" Margin="5"/>
+            <Button Content="Stocuri" Command="{Binding OpenStocuriViewCommand}" Width="200" Margin="5"/>
+        </StackPanel>
     </Grid>
 </Window>
