--- a/SupermarketWPF/SupermarketWPF/View/CategoriiView.xaml
+++ b/SupermarketWPF/SupermarketWPF/View/CategoriiView.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="SupermarketWPF.View.ProduseView"
+﻿<Window x:Class="SupermarketWPF.View.CategoriiView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ProduseView" Height="450" Width="800">
+        Title="CategoriiView" Height="450" Width="800">
     <Window.Resources>
         <Style x:Key="PlaceholderTextBoxStyle" TargetType="TextBox">
             <Style.Resources>
@@ -34,21 +34,15 @@
     </Window.Resources>
     <Grid>
         <StackPanel>
-            <TextBox x:Name="txtNumeProdus" Width="200" Margin="5" Tag="Nume Produs" Style="{StaticResource PlaceholderTextBoxStyle}" Text="{Binding NumeProdus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <TextBox x:Name="txtCodDeBare" Width="200" Margin="5" Tag="Cod De Bare" Style="{StaticResource PlaceholderTextBoxStyle}" Text="{Binding CodDeBare, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <TextBox x:Name="txtCategoria" Width="200" Margin="5" Tag="Categoria" Style="{StaticResource PlaceholderTextBoxStyle}" Text="{Binding Categoria, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <ComboBox x:Name="cmbProducatorId" Width="200" Margin="5" ItemsSource="{Binding ProducatoriList}" DisplayMemberPath="NumeProducator" SelectedValuePath="Id" SelectedValue="{Binding ProducatorId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <Button Content="Adaugă Produs" Command="{Binding AddProdusCommand}" Width="200" Margin="5"/>
-            <Button Content="Actualizează Produs" Command="{Binding UpdateProdusCommand}" Width="200" Margin="5"/>
-            <Button Content="Șterge Produs" Command="{Binding DeleteProdusCommand}" Width="200" Margin="5"/>
+            <TextBox x:Name="txtNumeCategorie" Width="200" Margin="5" Tag="Nume Categorie" Style="{StaticResource PlaceholderTextBoxStyle}" Text="{Binding NumeCategorie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <Button Content="Adaugă Categorie" Command="{Binding AddCategorieCommand}" Width="200" Margin="5"/>
+            <Button Content="Actualizează Categorie" Command="{Binding UpdateCategorieCommand}" Width="200" Margin="5"/>
+            <Button Content="Șterge Categorie" Command="{Binding DeleteCategorieCommand}" Width="200" Margin="5"/>
         </StackPanel>
-        <DataGrid ItemsSource="{Binding ProduseList}" AutoGenerateColumns="False" Width="750" Margin="25,217,25,10">
+        <DataGrid ItemsSource="{Binding CategoriiList}" AutoGenerateColumns="False" Width="750" Margin="25,136,25,10">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Nume Produs" Binding="{Binding NumeProdus}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Cod De Bare" Binding="{Binding CodDeBare}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Categoria" Binding="{Binding Categoria}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Producator" Binding="{Binding Producatori.NumeProducator}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Nume Categorie" Binding="{Binding NumeCategorie}" IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
