--- a/SupermarketWPF/SupermarketWPF/View/ProducatorView.xaml
+++ b/SupermarketWPF/SupermarketWPF/View/ProducatorView.xaml
@@ -1,52 +1,23 @@
 ﻿<Window x:Class="SupermarketWPF.View.ProducatorView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ProducatoriView" Height="450" Width="800">
-    <Window.Resources>
-        <Style x:Key="PlaceholderTextBoxStyle" TargetType="TextBox">
-            <Style.Resources>
-                <VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
-                    <VisualBrush.Visual>
-                        <TextBlock 
-                            Text="{Binding RelativeSource={RelativeSource AncestorType={x:Type TextBox}}, Path=Tag}"
-                            Foreground="LightGray"
-                            Margin="5,0,0,0"/>
-                    </VisualBrush.Visual>
-                </VisualBrush>
-            </Style.Resources>
-            <Style.Triggers>
-                <Trigger Property="Text" Value="">
-                    <Setter Property="Background">
-                        <Setter.Value>
-                            <VisualBrush AlignmentX="Left" AlignmentY="Center" Stretch="None">
-                                <VisualBrush.Visual>
-                                    <TextBlock Text="{Binding Tag, RelativeSource={RelativeSource AncestorType={x:Type TextBox}}}" Foreground="LightGray" Margin="5,0,0,0"/>
-                                </VisualBrush.Visual>
-                            </VisualBrush>
-                        </Setter.Value>
-                    </Setter>
-                </Trigger>
-                <Trigger Property="IsFocused" Value="True">
-                    <Setter Property="Background" Value="White"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-    </Window.Resources>
+        Title="Producători" Height="450" Width="800">
     <Grid>
         <StackPanel>
-            <TextBox x:Name="txtId" Width="200" Margin="5" Tag="ID Producător" Style="{StaticResource PlaceholderTextBoxStyle}" Text="{Binding Id, Mode=TwoWay}"/>
-            <TextBox x:Name="txtNumeProducator" Width="200" Margin="5" Tag="Nume Producător" Style="{StaticResource PlaceholderTextBoxStyle}" Text="{Binding NumeProducator, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <TextBox x:Name="txtTaraOrigine" Width="200" Margin="5" Tag="Țara Origine" Style="{StaticResource PlaceholderTextBoxStyle}" Text="{Binding TaraOrigine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="txtNumeProducator" Width="200" Margin="5" Tag="Nume Producător" Text="{Binding NumeProducator, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="txtTaraOrigine" Width="200" Margin="5" Tag="Țara de Origine" Text="{Binding TaraOrigine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             <Button Content="Adaugă Producător" Command="{Binding AddProducatorCommand}" Width="200" Margin="5"/>
             <Button Content="Actualizează Producător" Command="{Binding UpdateProducatorCommand}" Width="200" Margin="5"/>
             <Button Content="Șterge Producător" Command="{Binding DeleteProducatorCommand}" Width="200" Margin="5"/>
+            <Button Content="Vizualizează Produse" Command="{Binding ViewProduseByProducatorCommand}" Width="200" Margin="5"/>
         </StackPanel>
-        <DataGrid ItemsSource="{Binding ProducatoriList}" AutoGenerateColumns="False" Margin="10,188,25,10">
+        <DataGrid ItemsSource="{Binding ProducatoriList}" AutoGenerateColumns="False" Width="750" Margin="25,217,25,10" SelectedItem="{Binding SelectedProducator, Mode=TwoWay}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Nume Producător" Binding="{Binding NumeProducator}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Țara Origine" Binding="{Binding TaraOrigine}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Țara de Origine" Binding="{Binding TaraOrigine}" IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
 </Window>
+
