--- a/SupermarketWPF/SupermarketWPF/View/IncasariView.xaml
+++ b/SupermarketWPF/SupermarketWPF/View/IncasariView.xaml
@@ -1,16 +1,17 @@
 ﻿<Window x:Class="SupermarketWPF.View.IncasariView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SupermarketWPF.View"
-        mc:Ignorable="d"
-        Title="IncasariView" Height="450" Width="800">
+        Title="Venituri Utilizator" Height="450" Width="800">
     <Grid>
         <StackPanel>
-            <ComboBox x:Name="MonthComboBox" ItemsSource="{Binding Months}" Width="200" Margin="5"/>
-            <Button Content="Selectează Luna" Command="{Binding SelecteazaLunaCommand}" Width="200" Margin="5"/>
-            <ListBox x:Name="VenituriListBox" ItemsSource="{Binding VenituriList}" Width="200" Margin="5"/>
+            <ComboBox x:Name="LunaComboBox" Width="200" Margin="5" ItemsSource="{Binding Luni}" SelectedItem="{Binding LunaSelectata}" />
+            <Button Content="Vizualizează Venituri" Command="{Binding VizualizeazaVenituriCommand}" Width="200" Margin="5"/>
         </StackPanel>
+        <DataGrid ItemsSource="{Binding VenituriList}" AutoGenerateColumns="False" Width="750" Margin="25,217,25,10">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Data" Binding="{Binding Data, StringFormat=d}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Suma Totală" Binding="{Binding SumaTotala}" IsReadOnly="True"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
